# julia-riemann-solvers

./: .gitignore  README.md  analysis.ipynb  graph.sh  pyproject.toml  script.sh
base/: gas_flow.jl  godunov.jl
inputs/: test_nh_large.json  test_nh_medium.json  test_nh_small.json  test_nh_xlarge.json  test_nh_xxlarge.json  test_nh_zero.json
oscilated_stellar_wind/: animation.py  main.jl  script.py
riemann_problem/: graph.py  main.jl
riemann_solvers/: FluxSolver.jl  GasFlow.jl  Godunov.jl  HLL.jl  HLLC.jl  RiemannSolvers.jl
src/: flux_solver.jl  gas_flow.jl  hll.jl  hllc.jl  main.jl
static_solution/: nh_large.json  nh_medium.json  nh_small.json  nh_xlarge.json  nh_xxlarge.json  nh_xxlarge2.json
static_stellar_wind/: graph.py  main.jl
stellar_wind/: animation.py  color_map.py  enthropy.py  graph.py  main.jl
supersonic_source/: graph.py  main.jl
